edit case study

--- a/_projects/talkto.html
+++ b/_projects/talkto.html
@@ -55,7 +55,7 @@ news_posts:
   - title: Path Looks To Combine Commerce And Messaging With TalkTo Acquisition, Release Of New 'Talk' App
     url: https://techcrunch.com/2014/06/20/path-talk-talkto/
 project_url:
-project_cta: See the site
+project_cta:
 source_code_url:
 ---
 
