--- a/_projects/united_nations_accessibility.html
+++ b/_projects/united_nations_accessibility.html
@@ -53,9 +53,9 @@ source_code_url:
 
 {% capture solution %}
   <p>
-    Leveraging <a href="/work/toolkits/accessibility-guide/">Skylight's Accessibility Guide</a>, we kicked off the project with
-    a compliance audit of the conference website's accessibility deficiencies and
-    generated a report of pressing issues. The audit included a review of images,
+    Leveraging <a href="/work/toolkits/accessibility-guide/">Skylight's Accessibility Guide</a>,
+    we kicked off the project with a compliance audit of the conference website's accessibility deficiencies
+    and generated a report of pressing issues. The audit included a review of images,
     colors, contrast ratios, outlines, and other content. Working with the internal team,
     we fixed the underlying issues and rewrote code to make the website meet the WCAG 2.0
     accessibility standards. Finally, we tested the website with persons with
