--- a/_projects/usaf_gearfit.html
+++ b/_projects/usaf_gearfit.html
@@ -10,19 +10,21 @@ feature_image_description:
 feature_image_shadow:
 order: 5
 display: true
-tags: [service delivery, research & design, product management, software delivery, legacy modernization, devops, cloud & platforms, data & analytics, apis, security & privacy, defense, air force, mical nobel, phoebe espiritu, lesley evans, adam weber, nick clyde, mitchell sipus, maya benari, kari hodges, eric richards, nicole campbell]
+tags: [service delivery, research & design, product management, software delivery, legacy modernization, devops, cloud & platforms, data & analytics, apis, security & privacy, defense, air force, mical nobel, phoebe espiritu, lesley evans, adam weber, nick clyde, mitchell sipus, maya benari, kari hodges, eric richards, nicole campbell, andrew wagner, kenny nieh]
 excerpt: A digital platform for transforming how the U.S. Air Force manages personal protective equipment.
 project_members:
   - nicole-campbell
-  - phoebe-espiritu
-  - lesley-evans
-  - kari-hodges
+  - kenny-nieh
   - eric-richards
-  - adam-weber
   - nick-clyde
+  - andrew-wagner
+  - adam-weber
+  - phoebe-espiritu
   - maya-benari
   - mical-nobel
   - mitchell-sipus
+  - lesley-evans
+  - kari-hodges
 technologies:
   - HTML / CSS / Sass
   - JavaScript / React
