--- a/_projects/hhs_telehealth.html
+++ b/_projects/hhs_telehealth.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title_tag: Department of Health and Human Services
+title_tag: U.S. Department of Health and Human Services
 title: Advancing nationwide adoption of telehealth in response to COVID-19
 permalink: /work/experience/hhs-telehealth/
 image: /img/projects/hhs_telehealth/telehealth.svg
