update case study permalink

--- a/_projects/hhs_telehealth_website.html
+++ b/_projects/hhs_telehealth_website.html
@@ -2,7 +2,9 @@
 layout: default
 title_tag: U.S. Department of Health and Human Services
 title: Advancing nationwide adoption of telehealth in response to COVID-19
-permalink: /work/experience/hhs-telehealth/
+permalink: /work/experience/hhs-telehealth-website/
+redirect_from:
+  - /work/experience/hhs-telehealth/
 image: /img/projects/hhs_telehealth/telehealth.svg
 image_description: Phone screen with telehealth session underway.
 feature_image:
