case study edits

--- a/_projects/hhs_telehealth_website.html
+++ b/_projects/hhs_telehealth_website.html
@@ -195,7 +195,7 @@ source_code_url:
     </li>
 
     <li>
-      Reached over 375,000 people across the country since launch
+      Reached over 375,000 people across the country, from April 2020 to March 2021
     </li>
 
     <li>
