--- a/_projects/cms_iqies.html
+++ b/_projects/cms_iqies.html
@@ -9,7 +9,7 @@ feature_image:
 feature_image_description:
 feature_image_shadow:
 order: 85
-display: false
+display: true
 tags: [service delivery, research & design, software delivery, legacy modernization, victor zapanta, nick bristow]
 excerpt: A modernized system for evaluating and improving the quality of healthcare providers across the nation.
 project_members:
