--- a/_projects/hhs_telehealth_website.html
+++ b/_projects/hhs_telehealth_website.html
@@ -72,7 +72,7 @@ source_code_url:
   </p>
 
   <p>
-    New and rapidly evolving policies during the crisis expedited telehealth coverage and
+    New and rapidly-evolving policies during the crisis expedited telehealth coverage and
     availability, along with the need for information about how to provide or use it.
   </p>
 
