--- a/_projects/ncoc_refugee_admissions_research.html
+++ b/_projects/ncoc_refugee_admissions_research.html
@@ -2,8 +2,8 @@
 layout: default
 title_tag: National Conference on Citizenship
 title: Designing a roadmap to rebuild the U.S. Refugee Admission Program
-permalink: /work/experience/ncoc-refugee-asylum-research/
-image: /img/projects/ncoc_refugee_asylum_research/refugee-asylum.svg
+permalink: /work/experience/ncoc-refugee-admissions-research/
+image: /img/projects/ncoc_refugee_admissions_research/refugee-admissions.svg
 image_description: A refugee journeying from Africa to the U.S.
 feature_image:
 feature_image_description:
@@ -150,7 +150,7 @@ source_code_url:
   </p>
 
   <p class="border p-3 mb-0">
-    <img src="/img/projects/ncoc_refugee_asylum_research/refugee-journey-map.svg" alt="A journey map of the refugee experience.">
+    <img src="/img/projects/ncoc_refugee_admissions_research/refugee-admission-journey-map.svg" alt="A journey map of the refugee admission experience.">
   </p>
   <p class="caption">Source: Penn Biden Center/NCoC</p>
 {% endcapture %}
