--- a/_projects/ncoc_refugee_admissions_research.html
+++ b/_projects/ncoc_refugee_admissions_research.html
@@ -162,8 +162,8 @@ source_code_url:
 
 <p class="border p-3 mb-0">
   <img
-    src="/img/projects/ncoc_refugee_asylum_research/refugee-journey-map.png"
-    alt="A journey map of the refugee experience."
+    src="/img/projects/ncoc_refugee_admissions_research/refugee-admission-journey-map.png"
+    alt="A journey map of the refugee admission experience."
   />
 </p>
 <p class="caption">Source: Penn Biden Center/NCoC</p>
