case study edit

--- a/_projects/ncoc_refugee_admissions_research.html
+++ b/_projects/ncoc_refugee_admissions_research.html
@@ -62,7 +62,7 @@ source_code_url:
 <p>
   Refugee admissions under the U.S. Refugee Admissions Program reached historic
   lows from 2016&ndash;2020. Over that period, programs that support refugees
-  resettling in the U.S. were largely dismantled
+  resettling in the U.S. were largely dismantled.
 </p>
 
 <p>
