update careers page

--- a/pages/join.html
+++ b/pages/join.html
@@ -204,8 +204,9 @@ preload: hero-join-us.svg
             {% include icons/join/community.svg %}
             <h3>Community</h3>
             <p>
-              We give you pathways to engage with a growing community of organizations and individuals
-              working to change how the government works, such as the <a href="https://digitalservicescoalition.org/">Digital Services Coalition</a>,
+              We give you multiple pathways to engage with your community. We match 100% of
+              any charitable donations you make, up to $500 per year, and offer access to
+              community networks, such as the <a href="https://digitalservicescoalition.org/">Digital Services Coalition</a>,
               which we co-founded.
             </p>
           </div>
