--- a/pages/join.html
+++ b/pages/join.html
@@ -241,7 +241,7 @@ preload: hero-join-us.svg
         <h3>3. Skills interview</h3>
         <p>
           The skills interview lasts approximately one and a half hours. You'll be asked a
-          variety of questions about your skills and experience, and how you'd apply
+          variety of questions about your experience and skills, and how you'd apply
           them within the context of Skylight's work.
         </p>
 
