--- a/pages/join.html
+++ b/pages/join.html
@@ -50,7 +50,7 @@ preload: hero-join-us.svg
           for public good, whether that's improving
           <a href="/work/experience/ct-ece-reporter/">early childhood outcomes</a>
           or <a href="/work/experience/va-diffusion-marketplace/">helping to save veteran lives</a>.
-          You'll work alongside a team of <a href="/company/about/#meet-the-team">a team of extraordinarily-talented people</a>
+          You'll work alongside a team of <a href="/company/about/#meet-the-team">extraordinarily-talented people</a>
           who strive to bring out the best in you and each other. You'll also be taken care of with a
           well-thought-out <a href="#care-package">compensation and benefits package</a>.
           We want you to be happy, fulfilled, and well-supported.
