--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ preload: hero.svg
   <div class="landing-body">
     <section class="landing-content-row landing-content-row-margin">
       <div class="landing-content-primary-col">
-        <h2 class="text-primary">A new type of consultancy</h2>
+        <h2>A new type of consultancy</h2>
       </div>
 
       <div class="landing-content-secondary-col">
