--- a/pages/trainings/ditap_executive.html
+++ b/pages/trainings/ditap_executive.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 'Digital IT Acquisition Professional (DITAP) Training &mdash; Executive Edition'
+title: "Digital IT Acquisition Professional (DITAP) Training &mdash; Executive Edition"
 permalink: /work/services/training/ditap-executive/
 excerpt: Learn how to transform the way your agency procures modern technology products and services through a condensed, 1-day version of our 6-month DITAP training program.
 image: /img/ditap_executive/ditap-executive-banner.png
@@ -63,7 +63,7 @@ class_2_spots:
           </ul>
         </nav>
         <a
-          class="btn btn-primary-dark font-weight-bold mt-2"
+          class="btn btn-primary font-weight-bold mt-2"
           href="https://www.eventbrite.com/e/digital-it-acquisition-professional-ditap-training-executive-edition-tickets-105264284308"
           >Register now
           <i class="fa fa-chevron-right ml-2" aria-hidden="true"></i
