--- a/pages/training.html
+++ b/pages/training.html
@@ -5,10 +5,8 @@ permalink: /work/services/training/
 preload: hero-training.svg
 ---
 
-{% include hero_banner.html
-  hero_content = 'Get the skills you need to make government work in a digital world.'
-  color = 'blue'
-  image = 'hero-training.svg'
+{% include hero_banner.html hero_content = 'Get the skills you need to make
+government work in a digital world.' color = 'blue' image = 'hero-training.svg'
 %}
 <section class="container-lg mx-auto">
   <div class="container prose">
@@ -16,14 +14,20 @@ preload: hero-training.svg
       <div class="col-md-6 d-flex align-items-stretch">
         <div class="training-item toolkit-item p-5">
           <div class="training-item--content">
-            <h2 class="h3">Digital IT Acquisition Professional (DITAP) Training</h2>
+            <h2 class="h3">
+              Digital IT Acquisition Professional (DITAP) Training
+            </h2>
             <p>
-              Become a certified digial acquisition professional
-              through our expert-led, 6-month, part-time course.
+              Become a certified digial acquisition professional through our
+              expert-led, 6-month, part-time course.
             </p>
           </div>
           <div>
-            <a class="btn btn-primary-dark font-weight-bold" href="{{ site.baseurl }}/work/services/training/ditap/">Learn more</a>
+            <a
+              class="btn btn-primary font-weight-bold"
+              href="{{ site.baseurl }}/work/services/training/ditap/"
+              >Learn more</a
+            >
           </div>
         </div>
       </div>
@@ -31,14 +35,21 @@ preload: hero-training.svg
       <div class="col-md-6 d-flex align-items-stretch mt-5 mt-md-0">
         <div class="training-item toolkit-item p-5">
           <div class="training-item--content">
-            <h2 class="h3">Digital IT Acquisition Professional (DITAP) Training &mdash; Executive Edition</h2>
+            <h2 class="h3">
+              Digital IT Acquisition Professional (DITAP) Training &mdash;
+              Executive Edition
+            </h2>
             <p>
               Learn how to lead your agency into the world of modern procurement
               through a condensed, 1-day version of our 6-month DITAP program.
             </p>
           </div>
           <div>
-            <a class="btn btn-primary-dark font-weight-bold" href="/work/services/training/ditap-executive/">Learn more</a>
+            <a
+              class="btn btn-primary font-weight-bold"
+              href="/work/services/training/ditap-executive/"
+              >Learn more</a
+            >
           </div>
         </div>
       </div>
