--- a/pages/trainings/ditap.html
+++ b/pages/trainings/ditap.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 'Digital IT Acquisition Professional (DITAP) Training'
+title: "Digital IT Acquisition Professional (DITAP) Training"
 permalink: /work/services/training/ditap/
 redirect_from:
   - /services/ditap/
@@ -84,7 +84,7 @@ class_2_spots:
           </ul>
         </nav>
         <a
-          class="btn btn-primary-dark font-weight-bold mt-2"
+          class="btn btn-primary font-weight-bold mt-2"
           href="https://www.eventbrite.com/e/digital-it-acquisition-professional-ditap-training-tickets-148264871221"
           >Register now
           <i class="fa fa-chevron-right ml-2" aria-hidden="true"></i
