--- a/pages/join.html
+++ b/pages/join.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Join Us
+title: Join us
 permalink: /careers/join/
 redirect_from: /join/
 hero_content: Help us change the way government works.
