--- a/pages/services.html
+++ b/pages/services.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Our Services
+title: Our services
 permalink: /work/services/
 redirect_from:
   - /services/digital-procurement/
