--- a/pages/values.html
+++ b/pages/values.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Our Values
+title: Our values
 permalink: /company/values/
 redirect_from: /culture/
 preload: hero-values.svg
