--- a/pages/toolkits.html
+++ b/pages/toolkits.html
@@ -14,9 +14,13 @@ preload: hero-toolkits.svg
 <section class="mx-auto maxw-lg">
   <div class="container text prose">
     <p>
-      Here are some of the tools and resources that we use at Skylight to help us and our
-      clients deliver better public services. These toolkits are always being iterated on
-      and are available to everyone under our <a href="https://github.com/skylight-hq/skylight.digital/blob/master/LICENSE.md">public-domain license.</a>
+      Here are some of the tools and resources that we use at Skylight to help
+      us and our clients deliver better public services. These toolkits are
+      always being iterated on and are available to everyone under our
+      <a
+        href="https://github.com/skylight-hq/skylight.digital/blob/master/LICENSE.md"
+        >public-domain license.</a
+      >
       Feel free to copy and adapt them as you choose.
     </p>
 
@@ -26,8 +30,9 @@ preload: hero-toolkits.svg
           <a href="/work/toolkits/digital-talent-management/">
             <h2 class="h3">Digital Talent Management Handbook</h2>
           </a>
-          <p class="mt-3">{{ site.data.toolkits.digital_talent_management.description }}</p>
-          <p class="mb-0">Contact: <a href="mailto:communities@skylight.digital">Transformation Community of Practice</a></p>
+          <p class="mt-3 mb-0">
+            {{ site.data.toolkits.digital_talent_management.description }}
+          </p>
         </div>
       </div>
       <div class="col-md-6 d-flex align-items-stretch mt-5 mt-md-0">
@@ -35,8 +40,9 @@ preload: hero-toolkits.svg
           <a href="/work/toolkits/data-sharing-playbook/">
             <h2 class="h3">Data Sharing Playbook</h2>
           </a>
-          <p class="mt-3">{{ site.data.toolkits.data_sharing_playbook.description }}</p>
-          <p class="mb-0">Contact: <a href="mailto:communities@skylight.digital">Data Community of Practice</a></p>
+          <p class="mt-3 mb-0">
+            {{ site.data.toolkits.data_sharing_playbook.description }}
+          </p>
         </div>
       </div>
       <div class="col-md-6 d-flex align-items-stretch mt-5">
@@ -44,8 +50,9 @@ preload: hero-toolkits.svg
           <a href="/work/toolkits/accessibility-guide/">
             <h2 class="h3">Accessibility Guide</h2>
           </a>
-          <p class="mt-3">{{ site.data.toolkits.accessibility_guide.description }}</p>
-          <p class="mb-0">Contact: <a href="mailto:communities@skylight.digital">Accessibility Community of Practice</a></p>
+          <p class="mt-3 mb-0">
+            {{ site.data.toolkits.accessibility_guide.description }}
+          </p>
         </div>
       </div>
       <div class="col-md-6 d-flex align-items-stretch mt-5">
@@ -53,27 +60,30 @@ preload: hero-toolkits.svg
           <a href="/work/toolkits/agile-procurement-playbook/">
             <h2 class="h3">Agile Procurement Playbook</h2>
           </a>
-          <p class="mt-3">{{ site.data.toolkits.agile_procurement_playbook.description }}</p>
-          <p class="mb-0">Contact: <a href="mailto:communities@skylight.digital">Procurement Community of Practice</a></p>
+          <p class="mt-3 mb-0">
+            {{ site.data.toolkits.agile_procurement_playbook.description }}
+          </p>
         </div>
       </div>
-        <div class="col-md-6 d-flex align-items-stretch mt-5">
+      <div class="col-md-6 d-flex align-items-stretch mt-5">
         <div class="toolkit-item p-205">
           <a href="/work/toolkits/managing-technical-debt/">
             <h2 class="h3">Managing Technical Debt Guide</h2>
           </a>
-          <p class="mt-3">{{ site.data.toolkits.managing_technical_debt.description }}</p>
-          <p class="mb-0">Contact: <a href="mailto:communities@skylight.digital">Engineering Community of Practice</a></p>
+          <p class="mt-3 mb-0">
+            {{ site.data.toolkits.managing_technical_debt.description }}
+          </p>
         </div>
       </div>
     </div>
 
     <p>
-      These toolkits are managed by our Communities of Practice. Communities
-      are organized groups within Skylight who are passionate about developing
-      and sharing our expertise with the world. We currently have eight communities
-      of practice. These include: Research & Design, Product & Delivery, Engineering,
-      Data, Procurement, Transformation, Accessibility, and Internet of Things.
+      These toolkits are managed by our Communities of Practice. Communities are
+      organized groups within Skylight who are passionate about developing and
+      sharing our expertise with the world. We currently have eight communities
+      of practice. These include: Research & Design, Product & Delivery,
+      Engineering, Data, Procurement, Transformation, Accessibility, and
+      Internet of Things.
     </p>
   </div>
 </section>
