--- a/_projects/ct_ece_reporter.html
+++ b/_projects/ct_ece_reporter.html
@@ -79,7 +79,7 @@ source_code_url:
       Honestly, this would be a blessing. We're supposed to be running centers
       and helping families."
     </p>
-    <cite><strong>Anna Ruggiero, Executive Director, Children's Adventure Center, Sandyhook, CT</strong></cite>
+    <cite><strong>Anna Ruggiero,</strong> Executive Director, Children's Adventure Center, Sandyhook, CT</cite>
   </blockquote>
 {% endcapture %}
 
