--- a/pages/talks.html
+++ b/pages/talks.html
@@ -12,21 +12,20 @@ preload: hero-talks.svg
 %}
 
 <div class="container">
-  <h2 class="margin-heading mb-0">Videos</h2>
+  <h2 class="margin-heading">The latest</h2>
+  <div class=" embed-responsive embed-responsive-16by9">
+    <iframe title='Agile in a legacy Environment' class="embed-responsive-item" width="560" height="315" src="https://www.youtube.com/embed/_eGtm66_X9E" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  </div>
+  <h3 class="mt-3">Agile in a Legacy Environment</h3>
+  <h2 class="margin-heading">Videos</h2>
   <div class="row">
-    <div class="col-sm-6 mt-5 d-flex flex-column align-items-stretch">
-      <div class=" embed-responsive embed-responsive-16by9">
-        <iframe title='Agile in a legacy Environment' class="embed-responsive-item" width="560" height="315" src="https://www.youtube.com/embed/_eGtm66_X9E" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-      </div>
-      <h3 class="mt-3">Agile in a Legacy Environment</h3>
-    </div>
-    <div class="col-sm-6 mt-5 d-flex flex-column align-items-stretch">
+    <div class="col-sm-6 d-flex flex-column align-items-stretch">
       <div class=" embed-responsive embed-responsive-16by9">
         <iframe title='Modernizing Gov IT Through Share in Savings Contracts' class="embed-responsive-item" width="560" height="315" src="https://www.youtube.com/embed/ObzUL1d58eo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
       <h3 class="mt-3">Modernizing Gov IT Through Share in Savings Contracts</h3>
     </div>
-    <div class="col-sm-6 mt-5 d-flex flex-column align-items-stretch">
+    <div class="col-sm-6 d-flex flex-column align-items-stretch">
       <div class="embed-responsive embed-responsive-16by9">
         <iframe title='Modern Agile Procurement' class="embed-responsive-item" width="560" height="315" src="https://www.youtube.com/embed/lQREvCGELq8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
