--- a/pages/talks.html
+++ b/pages/talks.html
@@ -10,7 +10,7 @@ technology, and more.' color = 'red' image = 'hero-talks.svg' %}
 
 <div class="container">
   <h2 class="margin-heading">Featured</h2>
-  <div class="row">
+  <div class="talk__featured row">
     <div class="col-sm-8 d-flex flex-column align-items-stretch">
       <div class="embed-responsive embed-responsive-16by9">
         <iframe
