Update all posts page

--- a/pages/experience.html
+++ b/pages/experience.html
@@ -64,7 +64,7 @@ pagination:
           <div class="project-footer">
             <a href="{{item.permalink}}" tabindex="0">
               <span>Read more</span
-              ><i class="fa fa-chevron-right" aria-hidden="true"></i>
+              ><i class="far fa-chevron-right" aria-hidden="true"></i>
             </a>
           </div>
         </div>
