--- a/pages/blog.html
+++ b/pages/blog.html
@@ -49,7 +49,7 @@ pagination:
             </div>
             <div class="blog-post-footer">
               <a href="{{item.permalink}}" tabindex="0">
-                <span>Read more</span><i class="fa fa-chevron-right" aria-hidden="true"></i>
+                <span>Read more</span><i class="far fa-chevron-right" aria-hidden="true"></i>
               </a>
             </div>
           </div>
