update arrow icons

--- a/pages/experience.html
+++ b/pages/experience.html
@@ -64,7 +64,7 @@ pagination:
           <div class="project-footer">
             <a href="{{item.permalink}}" tabindex="0">
               <span>Read more</span
-              ><i class="far fa-chevron-right" aria-hidden="true"></i>
+              ><i class="fal fa-long-arrow-right" aria-hidden="true"></i>
             </a>
           </div>
         </div>
