--- a/pages/talks.html
+++ b/pages/talks.html
@@ -138,7 +138,7 @@ technology, and more.' color = 'red' image = 'hero-talks.svg' %}
         <div class="blog-post-footer">
           <a href="" tabindex="0">
             <span>Listen</span
-            ><i class="far fa-chevron-right" aria-hidden="true"></i>
+            ><i class="fal fa-long-arrow-right" aria-hidden="true"></i>
           </a>
         </div>
       </div>
@@ -166,7 +166,7 @@ technology, and more.' color = 'red' image = 'hero-talks.svg' %}
         <div class="blog-post-footer">
           <a href="" tabindex="0">
             <span>Listen</span
-            ><i class="far fa-chevron-right" aria-hidden="true"></i>
+            ><i class="fal fa-long-arrow-right" aria-hidden="true"></i>
           </a>
         </div>
       </div>
