--- a/pages/trainings/ditap_apply.html
+++ b/pages/trainings/ditap_apply.html
@@ -77,5 +77,5 @@ redirect_from:
   text_css_class = "page-subfooter-text-col"
   cta_path = "#"
   cta = "Email Us"
-  icon_css_class = "fa fa-chevron-right"
+  icon_css_class = "fal fa-long-arrow-right"
 %}
