--- a/pages/trainings/ditap_executive.html
+++ b/pages/trainings/ditap_executive.html
@@ -32,7 +32,7 @@ class_2_spots:
                 class="btn btn-warning text-dark mr-2 mt-sm-3"
                 href="https://www.eventbrite.com/e/digital-it-acquisition-professional-ditap-training-executive-edition-tickets-105264284308"
                 >Register now
-                <i class="fa fa-chevron-right ml-2" aria-hidden="true"></i
+                <i class="fal fa-long-arrow-right ml-2" aria-hidden="true"></i
               ></a>
             </div>
           </div>
@@ -66,7 +66,7 @@ class_2_spots:
           class="btn btn-primary font-weight-bold mt-2"
           href="https://www.eventbrite.com/e/digital-it-acquisition-professional-ditap-training-executive-edition-tickets-105264284308"
           >Register now
-          <i class="fa fa-chevron-right ml-2" aria-hidden="true"></i
+          <i class="fal fa-long-arrow-right ml-2" aria-hidden="true"></i
         ></a>
       </div>
     </div>
@@ -218,7 +218,7 @@ class_2_spots:
                 <a
                   href="https://www.eventbrite.com/e/digital-it-acquisition-professional-ditap-training-executive-edition-tickets-105264284308"
                   >Register now<i
-                    class="fa fa-chevron-right ml-2"
+                    class="fal fa-long-arrow-right ml-2"
                     aria-hidden="true"
                   ></i
                 ></a>
@@ -373,7 +373,7 @@ class_2_spots:
             <p class="mt-2">
               <strong class="tuition-card-link"
                 >Register now<i
-                  class="fa fa-chevron-right ml-2"
+                  class="fal fa-long-arrow-right ml-2"
                   aria-hidden="true"
                 ></i
               ></strong>
@@ -404,7 +404,7 @@ class_2_spots:
             <p class="mt-2">
               <strong class="tuition-card-link"
                 >Register now<i
-                  class="fa fa-chevron-right ml-2"
+                  class="fal fa-long-arrow-right ml-2"
                   aria-hidden="true"
                 ></i
               ></strong>
