--- a/pages/trainings/ditap.html
+++ b/pages/trainings/ditap.html
@@ -44,7 +44,7 @@ class_2_spots:
                 class="btn btn-warning text-dark mr-2 mt-sm-3"
                 href="https://www.eventbrite.com/e/digital-it-acquisition-professional-ditap-training-tickets-148264871221"
                 >Register now
-                <i class="fa fa-chevron-right ml-2" aria-hidden="true"></i
+                <i class="fal fa-long-arrow-right ml-2" aria-hidden="true"></i
               ></a>
             </div>
             <div class="hero-btn-wrapper pl-1">
@@ -87,7 +87,7 @@ class_2_spots:
           class="btn btn-primary font-weight-bold mt-2"
           href="https://www.eventbrite.com/e/digital-it-acquisition-professional-ditap-training-tickets-148264871221"
           >Register now
-          <i class="fa fa-chevron-right ml-2" aria-hidden="true"></i
+          <i class="fal fa-long-arrow-right ml-2" aria-hidden="true"></i
         ></a>
       </div>
     </div>
@@ -247,7 +247,7 @@ class_2_spots:
               <p class="mt-3">
                 <a href="/assets/Skylight-DITAP-Syllabus.pdf"
                   >Read syllabus
-                  <i class="fa fa-chevron-right ml-2" aria-hidden="true"></i
+                  <i class="fal fa-long-arrow-right ml-2" aria-hidden="true"></i
                 ></a>
               </p>
             </div>
@@ -404,7 +404,7 @@ class_2_spots:
             <p class="mt-2">
               <strong class="tuition-card-link"
                 >Register now<i
-                  class="fa fa-chevron-right ml-2"
+                  class="fal fa-long-arrow-right ml-2"
                   aria-hidden="true"
                 ></i
               ></strong>
