--- a/pages/trainings/ditap_apply.html
+++ b/pages/trainings/ditap_apply.html
@@ -73,7 +73,7 @@ redirect_from:
 
 {% include cta.html
   header = "Still have more questions?"
-  text = "Please don't hesitate to email us."
+  text = "Please don't hesitate to ask. We've got answers for you."
   text_css_class = "page-subfooter-text-col"
   cta_path = "#"
   cta = "Email Us"
