--- a/pages/trainings/ditap.html
+++ b/pages/trainings/ditap.html
@@ -553,5 +553,5 @@ class_2_spots:
 </div>
 
 {% include cta.html header = "Still have more questions?" text = "Please don't hesitate to ask. We've got answers for you." text_css_class = "page-subfooter-text-col" cta_path =
-"mailto:training@skylight.digital" cta = "Email Us" icon_css_class = "fa fa-at"
+"mailto:training@skylight.digital" cta = "Email us" icon_css_class = "fa fa-at"
 %}
