--- a/pages/trainings/ditap_apply.html
+++ b/pages/trainings/ditap_apply.html
@@ -76,6 +76,6 @@ redirect_from:
   text = "Please don't hesitate to ask. We've got answers for you."
   text_css_class = "page-subfooter-text-col"
   cta_path = "#"
-  cta = "Email Us"
+  cta = "Email us"
   icon_css_class = "fal fa-long-arrow-right"
 %}
