update heros and nav link color

--- a/pages/about.html
+++ b/pages/about.html
@@ -9,7 +9,7 @@ preload: hero-about-us.svg
 {% include hero_banner.html
   hero_title = 'We&apos;re Skylight!'
   hero_content = 'Our mission is to make government work in a digital world.'
-  color = 'primary'
+  color = 'info'
   image = 'hero-about-us.svg'
 %}
 
