--- a/pages/press.html
+++ b/pages/press.html
@@ -13,7 +13,7 @@ preload: hero-press.svg
 
 {% include hero_banner.html
   hero_content = 'Skylight in the news.'
-  color = 'primary'
+  color = 'info'
   image = 'hero-press.svg'
 %}
 <section class="container-md mx-auto">
