update join quote

--- a/pages/join.html
+++ b/pages/join.html
@@ -75,7 +75,7 @@ preload: hero-join-us.svg
               right problems in an increasingly complex environment, alongside some of the most
               inspired and talented folks in the industry."
             </p>
-            <p><b>Charlye Tran,</b> Product Manager</p>
+            <p><b><span class="text-gray-light">—</span> Charlye Tran,</b> Product Manager</p>
           </div>
         </div>
 
@@ -91,7 +91,7 @@ preload: hero-join-us.svg
               which is what the government needs more of from industry."
             </p>
 
-            <p><b>Shashank Khandelwal,</b> VP of Human Services</p>
+            <p><b><span class="text-gray-light">—</span> Shashank Khandelwal,</b> VP of Human Services</p>
           </div>
         </div>
 
@@ -107,7 +107,7 @@ preload: hero-join-us.svg
               can make the biggest impact."
             </p>
 
-            <p><b>Laura King,</b> UX Designer</p>
+            <p><b><span class="text-gray-light">—</span> Laura King,</b> UX Designer</p>
           </div>
         </div>
 
