Use caption style for tweet images

--- a/_projects/ncoc_refugee_admissions_research.html
+++ b/_projects/ncoc_refugee_admissions_research.html
@@ -160,7 +160,7 @@ source_code_url:
   years said they'd never seen before.
 </p>
 
-<p class="border p-3 mb-0">
+<p class="border p-3">
   <img
     src="/img/projects/ncoc_refugee_admissions_research/refugee-admission-journey-map.png"
     alt="A journey map of the refugee admission experience."
