--- a/pages/training.html
+++ b/pages/training.html
@@ -5,9 +5,12 @@ permalink: /work/services/training/
 preload: hero-training.svg
 ---
 
-{% include hero_banner.html hero_content = 'Get the skills you need to make
-government work in a digital world.' color = 'blue' image = 'hero-training.svg'
+{% include hero_banner.html
+  hero_content = 'Get the skills you need to make government work in a digital world.'
+  color = 'primary'
+  image = 'hero-training.svg'
 %}
+
 <section class="container-lg mx-auto">
   <div class="container prose">
     <div class="row">
