--- a/pages/values.html
+++ b/pages/values.html
@@ -8,7 +8,7 @@ preload: hero-values.svg
 
 {% include hero_banner.html
   hero_content = "Our values are the core of our culture, informing our thoughts, words, and actions."
-  color = 'primary'
+  color = 'info'
   image = 'hero-values.svg'
 %}
 
