add toolkits as cards

--- a/pages/toolkits.html
+++ b/pages/toolkits.html
@@ -24,57 +24,117 @@ preload: hero-toolkits.svg
       Feel free to copy and adapt them as you choose.
     </p>
 
-    <div class="row my-4">
-      <div class="col-md-6 d-flex align-items-stretch">
-        <div class="toolkit-item p-205">
-          <a href="/work/toolkits/digital-talent-management/">
-            <h2 class="h3">Digital Talent Management Handbook</h2>
-          </a>
-          <p class="mt-3 mb-0">
-            {{ site.data.toolkits.digital_talent_management.description }}
-          </p>
+    <div class="blog-posts-row mt-5">
+      <article class="blog-post-col col-md-6">
+        <div
+          class="blog-post-card card-link"
+          data-href="/work/toolkits/digital-talent-management/"
+          tabindex="-1"
+        >
+          <div class="blog-post-block">
+            <h2 class="blog-post-title">
+              Digital Talent Management Handbook
+            </h2>
+            <p class="blog-post-text">
+              {{ site.data.toolkits.digital_talent_management.description }}
+            </p>
+          </div>
+          <div class="blog-post-footer">
+            <a href="" tabindex="0">
+              <span>View handbook</span
+              ><i class="fal fa-long-arrow-right" aria-hidden="true"></i>
+            </a>
+          </div>
         </div>
-      </div>
-      <div class="col-md-6 d-flex align-items-stretch mt-5 mt-md-0">
-        <div class="toolkit-item p-205">
-          <a href="/work/toolkits/data-sharing-playbook/">
-            <h2 class="h3">Data Sharing Playbook</h2>
-          </a>
-          <p class="mt-3 mb-0">
-            {{ site.data.toolkits.data_sharing_playbook.description }}
-          </p>
+      </article>
+      <article class="blog-post-col col-md-6">
+        <div
+          class="blog-post-card card-link"
+          data-href="/work/toolkits/data-sharing-playbook/"
+          tabindex="-1"
+        >
+          <div class="blog-post-block">
+            <h2 class="blog-post-title">
+              Data Sharing Playbook
+            </h2>
+            <p class="blog-post-text">
+              {{ site.data.toolkits.data_sharing_playbook.description }}
+            </p>
+          </div>
+          <div class="blog-post-footer">
+            <a href="" tabindex="0">
+              <span>View handbook</span
+              ><i class="fal fa-long-arrow-right" aria-hidden="true"></i>
+            </a>
+          </div>
         </div>
-      </div>
-      <div class="col-md-6 d-flex align-items-stretch mt-5">
-        <div class="toolkit-item p-205">
-          <a href="/work/toolkits/accessibility-guide/">
-            <h2 class="h3">Accessibility Guide</h2>
-          </a>
-          <p class="mt-3 mb-0">
-            {{ site.data.toolkits.accessibility_guide.description }}
-          </p>
+      </article>
+      <article class="blog-post-col col-md-6">
+        <div
+          class="blog-post-card card-link"
+          data-href="/work/toolkits/accessibility-guide/"
+          tabindex="-1"
+        >
+          <div class="blog-post-block">
+            <h2 class="blog-post-title">
+              Accessibility Guide
+            </h2>
+            <p class="blog-post-text">
+              {{ site.data.toolkits.accessibility_guide.description }}
+            </p>
+          </div>
+          <div class="blog-post-footer">
+            <a href="" tabindex="0">
+              <span>View handbook</span
+              ><i class="fal fa-long-arrow-right" aria-hidden="true"></i>
+            </a>
+          </div>
         </div>
-      </div>
-      <div class="col-md-6 d-flex align-items-stretch mt-5">
-        <div class="toolkit-item p-205">
-          <a href="/work/toolkits/agile-procurement-playbook/">
-            <h2 class="h3">Agile Procurement Playbook</h2>
-          </a>
-          <p class="mt-3 mb-0">
-            {{ site.data.toolkits.agile_procurement_playbook.description }}
-          </p>
+      </article>
+      <article class="blog-post-col col-md-6">
+        <div
+          class="blog-post-card card-link"
+          data-href="/work/toolkits/agile-procurement-playbook/"
+          tabindex="-1"
+        >
+          <div class="blog-post-block">
+            <h2 class="blog-post-title">
+              Agile Procurement Playbook
+            </h2>
+            <p class="blog-post-text">
+              {{ site.data.toolkits.agile_procurement_playbook.description }}
+            </p>
+          </div>
+          <div class="blog-post-footer">
+            <a href="" tabindex="0">
+              <span>View handbook</span
+              ><i class="fal fa-long-arrow-right" aria-hidden="true"></i>
+            </a>
+          </div>
         </div>
-      </div>
-      <div class="col-md-6 d-flex align-items-stretch mt-5">
-        <div class="toolkit-item p-205">
-          <a href="/work/toolkits/managing-technical-debt/">
-            <h2 class="h3">Managing Technical Debt Guide</h2>
-          </a>
-          <p class="mt-3 mb-0">
-            {{ site.data.toolkits.managing_technical_debt.description }}
-          </p>
+      </article>
+      <article class="blog-post-col col-md-6">
+        <div
+          class="blog-post-card card-link"
+          data-href="/work/toolkits/managing-technical-debt/"
+          tabindex="-1"
+        >
+          <div class="blog-post-block">
+            <h2 class="blog-post-title">
+              Managing Technical Debt Guide
+            </h2>
+            <p class="blog-post-text">
+              {{ site.data.toolkits.managing_technical_debt.description }}
+            </p>
+          </div>
+          <div class="blog-post-footer">
+            <a href="" tabindex="0">
+              <span>View handbook</span
+              ><i class="fal fa-long-arrow-right" aria-hidden="true"></i>
+            </a>
+          </div>
         </div>
-      </div>
+      </article>
     </div>
 
     <p>
