--- a/pages/talks.html
+++ b/pages/talks.html
@@ -33,87 +33,159 @@ technology, and more.' color = 'red' image = 'hero-talks.svg' %}
   </div>
   <h2 class="margin-heading">Videos</h2>
   <div class="row">
-    <div class="col-sm-4 d-flex flex-column align-items-stretch">
-      <div class="embed-responsive embed-responsive-16by9">
-        <iframe
-          title="Modernizing Gov IT Through Share in Savings Contracts"
-          class="embed-responsive-item"
-          width="560"
-          height="315"
-          src="https://www.youtube.com/embed/ObzUL1d58eo"
-          frameborder="0"
-          allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-          allowfullscreen
-        ></iframe>
+    <article class="blog-post-col">
+      <div
+        class="blog-post-card card-link"
+        data-href="https://www.youtube.com/watch?v=ObzUL1d58eo"
+        tabindex="-1"
+      >
+        <div
+          role="img"
+          class="blog-post-img embed-responsive embed-responsive-16by9"
+          style="background-image: url()"
+          title=""
+        >
+          <iframe
+            title="Agile in a legacy Environment"
+            class="embed-responsive-item"
+            width="560"
+            height="315"
+            src="https://www.youtube.com/embed/ObzUL1d58eo"
+            frameborder="0"
+            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen
+          ></iframe>
+        </div>
+        <div class="blog-post-block">
+          <h3 class="blog-post-title">
+            Modernizing Gov IT Through Share in Savings Contracts
+          </h3>
+          <p class="blog-post-text">Lorem ipsum</p>
+        </div>
       </div>
-      <h3 class="mt-3 font-lg">
-        Modernizing Gov IT Through Share in Savings Contracts
-      </h3>
-    </div>
-    <div class="col-sm-4 d-flex flex-column align-items-stretch">
-      <div class="embed-responsive embed-responsive-16by9">
-        <iframe
-          title="Modern Agile Procurement"
-          class="embed-responsive-item"
-          width="560"
-          height="315"
-          src="https://www.youtube.com/embed/lQREvCGELq8"
-          frameborder="0"
-          allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-          allowfullscreen
-        ></iframe>
+    </article>
+    <article class="blog-post-col">
+      <div
+        class="blog-post-card card-link"
+        data-href="https://www.youtube.com/watch?v=lQREvCGELq8"
+        tabindex="-1"
+      >
+        <div
+          role="img"
+          class="blog-post-img embed-responsive embed-responsive-16by9"
+          style="background-image: url()"
+          title=""
+        >
+          <iframe
+            title="Modern Agile Procurement"
+            class="embed-responsive-item"
+            width="560"
+            height="315"
+            src="https://www.youtube.com/embed/lQREvCGELq8"
+            frameborder="0"
+            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen
+          ></iframe>
+        </div>
+        <div class="blog-post-block">
+          <h3 class="blog-post-title">Modern Agile Procurement</h3>
+          <p class="blog-post-text">Lorem ipsum</p>
+        </div>
       </div>
-      <h3 class="mt-3 font-lg">Modern Agile Procurement</h3>
-    </div>
-    <div class="col-sm-4 d-flex flex-column align-items-stretch">
-      <div class="embed-responsive embed-responsive-16by9">
-        <iframe
-          title="Sean Johnson - Pattern Matching in Clojure"
-          class="embed-responsive-item"
-          width="560"
-          height="315"
-          src="https://www.youtube.com/embed/n7aE6k8o_BU"
-          frameborder="0"
-          allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-          allowfullscreen
-        ></iframe>
+    </article>
+    <article class="blog-post-col">
+      <div
+        class="blog-post-card card-link"
+        data-href="https://www.youtube.com/watch?v=n7aE6k8o_BU"
+        tabindex="-1"
+      >
+        <div
+          role="img"
+          class="blog-post-img embed-responsive embed-responsive-16by9"
+          style="background-image: url()"
+          title=""
+        >
+          <iframe
+            title="Sean Johnson - Pattern Matching in Clojure"
+            class="embed-responsive-item"
+            width="560"
+            height="315"
+            src="https://www.youtube.com/embed/n7aE6k8o_BU"
+            frameborder="0"
+            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen
+          ></iframe>
+        </div>
+        <div class="blog-post-block">
+          <h3 class="blog-post-title">
+            Sean Johnson - Pattern Matching in Clojure
+          </h3>
+          <p class="blog-post-text">Lorem ipsum</p>
+        </div>
       </div>
-      <h3 class="mt-3 font-md">Sean Johnson - Pattern Matching in Clojure</h3>
-    </div>
-    <div class="col-sm-4 mt-5 d-flex flex-column align-items-stretch">
-      <div class="embed-responsive embed-responsive-16by9">
-        <iframe
-          title="Kin Lane talks APIs with Matthew Reinbold and DevExchange"
-          class="embed-responsive-item"
-          width="560"
-          height="315"
-          src="https://www.youtube.com/embed/DbatBt_fPug"
-          frameborder="0"
-          allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-          allowfullscreen
-        ></iframe>
+    </article>
+    <article class="blog-post-col">
+      <div
+        class="blog-post-card card-link"
+        data-href="https://www.youtube.com/watch?v=DbatBt_fPug"
+        tabindex="-1"
+      >
+        <div
+          role="img"
+          class="blog-post-img embed-responsive embed-responsive-16by9"
+          style="background-image: url()"
+          title=""
+        >
+          <iframe
+            title="Kin Lane talks APIs with Matthew Reinbold and DevExchange"
+            class="embed-responsive-item"
+            width="560"
+            height="315"
+            src="https://www.youtube.com/embed/DbatBt_fPug"
+            frameborder="0"
+            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen
+          ></iframe>
+        </div>
+        <div class="blog-post-block">
+          <h3 class="blog-post-title">
+            Kin Lane talks APIs with Matthew Reinbold and DevExchange
+          </h3>
+          <p class="blog-post-text">Lorem ipsum</p>
+        </div>
       </div>
-      <h3 class="mt-3 font-md">
-        Kin Lane talks APIs with Matthew Reinbold and DevExchange
-      </h3>
-    </div>
-    <div class="col-sm-4 mt-5 d-flex flex-column align-items-stretch">
-      <div class="embed-responsive embed-responsive-16by9">
-        <iframe
-          title="LoRa Alliance Keynote at IoT Evolution EXPO 2018"
-          class="embed-responsive-item"
-          width="560"
-          height="315"
-          src="https://www.youtube.com/embed/kWyYdjWDaXU"
-          frameborder="0"
-          allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-          allowfullscreen
-        ></iframe>
+    </article>
+    <article class="blog-post-col">
+      <div
+        class="blog-post-card card-link"
+        data-href="https://www.youtube.com/watch?v=kWyYdjWDaXU"
+        tabindex="-1"
+      >
+        <div
+          role="img"
+          class="blog-post-img embed-responsive embed-responsive-16by9"
+          style="background-image: url()"
+          title=""
+        >
+          <iframe
+            title="LoRa Alliance Keynote at IoT Evolution EXPO 2018"
+            class="embed-responsive-item"
+            width="560"
+            height="315"
+            src="https://www.youtube.com/embed/kWyYdjWDaXU"
+            frameborder="0"
+            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen
+          ></iframe>
+        </div>
+        <div class="blog-post-block">
+          <h3 class="blog-post-title">
+            LoRa Alliance Keynote at IoT Evolution EXPO 2018
+          </h3>
+          <p class="blog-post-text">Lorem ipsum</p>
+        </div>
       </div>
-      <h3 class="mt-3 font-md">
-        LoRa Alliance Keynote at IoT Evolution EXPO 2018
-      </h3>
-    </div>
+    </article>
   </div>
   <h2 class="margin-heading">Podcasts</h2>
   <div class="blog-posts-row">
@@ -133,13 +205,7 @@ technology, and more.' color = 'red' image = 'hero-talks.svg' %}
           <h3 class="blog-post-title">
             Dissecting the President's management agenda
           </h3>
-          <p class="blog-post-text"></p>
-        </div>
-        <div class="blog-post-footer">
-          <a href="" tabindex="0">
-            <span>Listen</span
-            ><i class="fal fa-long-arrow-right" aria-hidden="true"></i>
-          </a>
+          <p class="blog-post-text">Lorem ipsum</p>
         </div>
       </div>
     </article>
@@ -161,13 +227,7 @@ technology, and more.' color = 'red' image = 'hero-talks.svg' %}
             Authorities and Modular Techniques, Featuring Inputs from Chris
             Cairns, Keith Deavan, and Mark Junda
           </h3>
-          <p class="blog-post-text"></p>
-        </div>
-        <div class="blog-post-footer">
-          <a href="" tabindex="0">
-            <span>Listen</span
-            ><i class="fal fa-long-arrow-right" aria-hidden="true"></i>
-          </a>
+          <p class="blog-post-text">Lorem ipsum</p>
         </div>
       </div>
     </article>
