update toolkit ctas

--- a/pages/toolkits.html
+++ b/pages/toolkits.html
@@ -63,7 +63,7 @@ preload: hero-toolkits.svg
           </div>
           <div class="blog-post-footer">
             <a href="" tabindex="0">
-              <span>View handbook</span
+              <span>View playbook</span
               ><i class="fal fa-long-arrow-right" aria-hidden="true"></i>
             </a>
           </div>
@@ -85,7 +85,7 @@ preload: hero-toolkits.svg
           </div>
           <div class="blog-post-footer">
             <a href="" tabindex="0">
-              <span>View handbook</span
+              <span>View guide</span
               ><i class="fal fa-long-arrow-right" aria-hidden="true"></i>
             </a>
           </div>
@@ -107,7 +107,7 @@ preload: hero-toolkits.svg
           </div>
           <div class="blog-post-footer">
             <a href="" tabindex="0">
-              <span>View handbook</span
+              <span>View playbook</span
               ><i class="fal fa-long-arrow-right" aria-hidden="true"></i>
             </a>
           </div>
@@ -129,7 +129,7 @@ preload: hero-toolkits.svg
           </div>
           <div class="blog-post-footer">
             <a href="" tabindex="0">
-              <span>View handbook</span
+              <span>View guide</span
               ><i class="fal fa-long-arrow-right" aria-hidden="true"></i>
             </a>
           </div>
