update training to cards

--- a/pages/training.html
+++ b/pages/training.html
@@ -11,51 +11,56 @@ preload: hero-training.svg
   image = 'hero-training.svg'
 %}
 
-<section class="container-lg mx-auto">
-  <div class="container prose">
-    <div class="row">
-      <div class="col-md-6 d-flex align-items-stretch">
-        <div class="training-item toolkit-item p-5">
-          <div class="training-item--content">
-            <h2 class="h3">
+<section class="mx-auto maxw-lg">
+  <div class="container text prose">
+    <div class="blog-posts-row mt-5">
+      <article class="blog-post-col col-md-6">
+        <div
+          class="blog-post-card card-link"
+          data-href="{{ site.baseurl }}/work/services/training/ditap/"
+          tabindex="-1"
+        >
+          <div class="blog-post-block">
+            <h2 class="blog-post-title">
               Digital IT Acquisition Professional (DITAP) Training
             </h2>
-            <p>
+            <p class="blog-post-text">
               Become a certified digial acquisition professional through our
               expert-led, 6-month, part-time course.
             </p>
           </div>
-          <div>
-            <a
-              class="btn btn-primary font-weight-bold"
-              href="{{ site.baseurl }}/work/services/training/ditap/"
-              >Learn more</a
-            >
+          <div class="blog-post-footer">
+            <a href="" tabindex="0">
+              <span>Learn more</span
+              ><i class="fal fa-long-arrow-right" aria-hidden="true"></i>
+            </a>
           </div>
         </div>
-      </div>
-
-      <div class="col-md-6 d-flex align-items-stretch mt-5 mt-md-0">
-        <div class="training-item toolkit-item p-5">
-          <div class="training-item--content">
-            <h2 class="h3">
+      </article>
+      <article class="blog-post-col col-md-6">
+        <div
+          class="blog-post-card card-link"
+          data-href="/work/services/training/ditap-executive/"
+          tabindex="-1"
+        >
+          <div class="blog-post-block">
+            <h2 class="blog-post-title">
               Digital IT Acquisition Professional (DITAP) Training &mdash;
               Executive Edition
             </h2>
-            <p>
-              Learn how to lead your agency into the world of modern procurement
-              through a condensed, 1-day version of our 6-month DITAP program.
+            <p class="blog-post-text">
+              Become a certified digial acquisition professional through our
+              expert-led, 6-month, part-time course.
             </p>
           </div>
-          <div>
-            <a
-              class="btn btn-primary font-weight-bold"
-              href="/work/services/training/ditap-executive/"
-              >Learn more</a
-            >
+          <div class="blog-post-footer">
+            <a href="" tabindex="0">
+              <span>Learn more</span
+              ><i class="fal fa-long-arrow-right" aria-hidden="true"></i>
+            </a>
           </div>
         </div>
-      </div>
+      </article>
     </div>
   </div>
 </section>
