Add podcast images

--- a/pages/talks.html
+++ b/pages/talks.html
@@ -198,7 +198,7 @@ technology, and more.' color = 'red' image = 'hero-talks.svg' %}
         <div
           role="img"
           class="blog-post-img"
-          style="background-image: url()"
+          style="background-image: url(/img/podcast/podcast-placeholder-01.svg)"
           title=""
         ></div>
         <div class="blog-post-block">
@@ -218,7 +218,7 @@ technology, and more.' color = 'red' image = 'hero-talks.svg' %}
         <div
           role="img"
           class="blog-post-img"
-          style="background-image: url()"
+          style="background-image: url(/img/podcast/podcast-placeholder-02.svg)"
           title=""
         ></div>
         <div class="blog-post-block">
