Add more space to landing callout footer

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@ preload: hero.svg
       </div>
     </section>
 
-    <section class="landing-content-row">
+    <section class="landing-content-row landing__callout--footer">
       <div class="landing-content-primary-col">
         <h2>Let's deliver something&nbsp;great</h2>
       </div>
