update home quotes to curly

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ preload: hero.svg
       <div class="landing-content-secondary-col">
         <p>
           Digital to the core. Open by default. Empowered talent. Public
-          servants at heart. We're a new type of government consultancy for the
+          servants at heart. We’re a new type of government consultancy for the
           digital era.
         </p>
       </div>
@@ -65,7 +65,7 @@ preload: hero.svg
             Every day millions of people &mdash; from veterans to immigrants
             &mdash; depend on government services to fulfill their needs. But
             too often these services are delivered using outmoded policies,
-            practices, and technologies. We're public servants at heart who are
+            practices, and technologies. We’re public servants at heart who are
             driven to make these services work better in the internet era.
           </p>
         </div>
@@ -111,7 +111,7 @@ preload: hero.svg
             We founded and scaled 18F, built and sold technology startups,
             created standards that power the internet, and more. With our unique
             blend of government and commercial expertise, you can rely on us to
-            help solve your agency's toughest digital challenges.
+            help solve your agency’s toughest digital challenges.
           </p>
         </div>
       </div>
@@ -141,13 +141,13 @@ preload: hero.svg
 
     <section class="landing-content-row landing__callout--footer">
       <div class="landing-content-primary-col">
-        <h2>Let's deliver something&nbsp;great</h2>
+        <h2>Let’s deliver something&nbsp;great</h2>
       </div>
 
       <div class="landing-content-secondary-col">
         <p>
-          Succeeding in today's digital age requires engaging with teams who
-          understand both digital and government. We're designed from the
+          Succeeding in today’s digital age requires engaging with teams who
+          understand both digital and government. We’re designed from the
           bottom-up to help you achieve digital mastery.
         </p>
       </div>
