Add line breaks to hero text

--- a/pages/about.html
+++ b/pages/about.html
@@ -8,7 +8,7 @@ preload: hero-about-us.svg
 
 {% include hero_banner.html
   hero_title = 'We&apos;re Skylight!'
-  hero_content = 'Our mission is to make government work in a digital world.'
+  hero_content = 'Our mission is to make government work <br class="linebreak">in a digital world.'
   color = 'info'
   image = 'hero-about-us.svg'
 %}
