--- a/pages/talks.html
+++ b/pages/talks.html
@@ -5,8 +5,11 @@ permalink: /thoughts/talks/
 preload: hero-talks.svg
 ---
 
-{% include hero_banner.html hero_content = 'Our spoken thoughts on design,
-technology, and more.' color = 'red' image = 'hero-talks.svg' %}
+{% include hero_banner.html
+  hero_content = 'Our spoken thoughts on design, <br class="linebreak">technology, and more.'
+  color = 'red'
+  image = 'hero-talks.svg'
+%}
 
 <div class="container">
   <h2 class="margin-heading">Featured</h2>
