--- a/pages/values.html
+++ b/pages/values.html
@@ -7,7 +7,7 @@ preload: hero-values.svg
 ---
 
 {% include hero_banner.html
-  hero_content = "Our values are the core of our culture, informing our thoughts, words, and actions."
+  hero_content = 'Our values are the core of our culture, <br class="linebreak">informing our thoughts, words, and actions.'
   color = 'info'
   image = 'hero-values.svg'
 %}
