--- a/pages/contracting.html
+++ b/pages/contracting.html
@@ -6,7 +6,7 @@ preload: hero-contracting.svg
 ---
 
 {% include hero_banner.html
-  hero_content = 'Learn more about why and how to contract with us.'
+  hero_content = 'Learn more about why and how <br class="linebreak">to contract with us.'
   color = "yellow"
   text = "dark"
   image = 'hero-contracting.svg'
